--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,52 @@
+altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/altgraph-0.17.2-py2.py3-none-any.whl
+appnope==0.1.3
+asttokens==2.2.1
+autopep8==2.0.2
+backcall==0.2.0
 bcrypt==4.0.1
-blinker==1.6.3
+blinker==1.6.2
 certifi==2023.7.22
-charset-normalizer==3.3.0
-click==8.1.7
+charset-normalizer==3.2.0
+click==8.1.6
+decorator==5.1.1
 dnspython==2.4.2
 email-validator==2.0.0.post2
-Flask==3.0.0
+executing==1.2.0
+Flask==2.3.2
 Flask-Bcrypt==1.0.1
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.1
+Flask-DebugToolbar==0.13.1
+Flask-SQLAlchemy==3.0.5
+Flask-WTF==1.1.1
+future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/future-0.18.2-py3-none-any.whl
+gunicorn==21.2.0
 idna==3.4
 importlib-metadata==6.8.0
+ipython==8.14.0
 itsdangerous==2.1.2
+jedi==0.18.2
 Jinja2==3.1.2
+macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/macholib-1.15.2-py2.py3-none-any.whl
 MarkupSafe==2.1.3
-psycopg2==2.9.9
+matplotlib-inline==0.1.6
+packaging==23.2
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.39
+psycopg2-binary==2.9.7
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycodestyle==2.10.0
+Pygments==2.15.1
 requests==2.31.0
-SQLAlchemy==2.0.21
-typing_extensions==4.8.0
-urllib3==2.0.6
-Werkzeug==3.0.0
+six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/six-1.15.0-py2.py3-none-any.whl
+SQLAlchemy==2.0.20
+stack-data==0.6.2
+tomli==2.0.1
+traitlets==5.9.0
+typing_extensions==4.7.1
+urllib3==2.0.4
+wcwidth==0.2.6
+Werkzeug==2.3.6
 WTForms==3.0.1
-zipp==3.17.0
+zipp==3.16.2
